bin/test/Fall_21_Test_Cases/Bad/LO-0/lvl0-bad-easy-ij.lo
//bad case
//Identifier starts with _
String _abc;
{
_abc = "Hello World";
}
